evaluat&note
